# engineering

./: CLAUDE.md  README.md
apps/: .dockerignore  Cargo.toml  Justfile
apps/cert-manager/: Cargo.toml  Dockerfile  local-config.yaml
apps/cert-manager/.sqlx/: query-4d0651c6d3c401b4f46a903e8907523310984182e485851f2028f5d607353386.json  query-5136f19d6cfdc1760336d9af29b7226de964a015eee3fb194042b3c5277e4b49.json  query-faf5fa50d1a01c17da5871eeffc139ed4818db40e0226a4a7d07ff176c7565bc.json
apps/cert-manager/src/: acme.rs  configuration.rs  dns.rs  main.rs  storage.rs  watcher.rs
apps/certmanager/: Cargo.toml  Dockerfile  local-config.yaml
apps/certmanager/.sqlx/: query-e1422d3a573fc584a2d567c5f2b45bb603fa4dbd336613c0c14a3d71374472d1.json  query-f007d004082b7e31aab46c8bbdee5bb7f2dda17d317c6d1128cc4dfc659e179b.json
apps/certmanager/assets/: style.css
apps/certmanager/migrations/: 20260320160544_AddInitialSchema.sql
apps/certmanager/src/: acme.rs  configuration.rs  main.rs  renewal.rs  server.rs  templates.rs  uid.rs  watcher.rs
apps/certmanager/templates/: index.tera.html
apps/dns-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  local-config.yaml
apps/dns-server/certificates/: local-fullchain.pem  local-privkey.pem
apps/dns-server/resources/: sample-config.yaml
apps/dns-server/scripts/: setup-local-ca.sh
apps/dns-server/src/: blocklist.rs  cache.rs  config.rs  handler.rs  main.rs  server.rs  tls.rs  upstream.rs
apps/events/: .env  Cargo.toml  Dockerfile  local-config.yaml
apps/events/.sqlx/: query-09a3e1141539176ddb10bd371d991007d7b3bd5a257e5e6704690f06212c2e86.json  query-20ae79ed0b4e10927ca2926328decd84c727e23e0309a636477fb4af4034138b.json  query-272b313d879082dc0a9388769418356dd4f144aae86769097bfebdb3af2b4721.json  query-6923089e8a6d3abd97bc8ab10a58af191a8cbeb81ca7d6e605503e6a8afd0f8a.json  query-6d28d0b409e0d4934fb18350e2b6436c577ffd63373a970f23d5fa5344241988.json  query-769318baa429cd2232480203abf353388498d76daec95729d143d896f21e3ffb.json  query-77547c134c2b554047de4e0f5d135d845b5f496779bcefa090f7b23520e224ad.json  query-7e455bdbe2a66f6333afc40df63141dcfb99d47d2ee1cda906810c72bce57c86.json  query-8e9ea553ff5f865a54ca80eaa7633427f20a971fbba1485da940ae1de5091fe0.json
apps/events/migrations/: 20260314073130_CreateRetainerSchema.sql  20260415203103_AddRetainerSeating.sql
apps/events/src/: config.rs  main.rs  persistence.rs  server.rs  templates.rs
apps/events/templates/: history.tera.html  index.tera.html
apps/f2/: .dockerignore  Cargo.toml  Dockerfile  Justfile
apps/f2/development/: Dockerfile.debug  args-default-config.yaml  args-override-config.yaml  echo-double-config.yaml  echo-single-config.yaml  nginx.conf  tcp-tls-config.yaml  volumes-config.yaml
apps/f2/integration-tests/: Cargo.toml
apps/f2/src/: common.rs  config.rs  main.rs  reconciler.rs
apps/foundation/: README.md
apps/foundation/args/: Cargo.toml
apps/foundation/configuration/: Cargo.toml  README.md
apps/foundation/credentials/: Cargo.toml
apps/foundation/database-bootstrap/: Cargo.toml
apps/foundation/http-server/: Cargo.toml  README.md
apps/foundation/init/: Cargo.toml
apps/foundation/logging/: Cargo.toml  README.md
apps/foundation/metrics/: Cargo.toml
apps/foundation/recurring-job/: Cargo.toml
apps/foundation/shutdown/: Cargo.toml
apps/foundation/telemetry/: Cargo.toml  README.md
apps/foundation/templating/: Cargo.toml
apps/foundation/uid/: Cargo.toml  README.md
apps/lockers/: .env  Cargo.toml  Dockerfile  local-config.yaml
apps/lockers/.sqlx/: query-2144cb9cad7ba48dfa51c444c76724994f266f716984a92cf5fedd87f86018a8.json  query-246e4a54d12c9ec868f10d7709d5e5335bce61d6fed1fe715717bfbb048db5f2.json  query-3d856845410cf14799cc43c93de4ffaaf7224b65cccf35e3b9d2ab936d96cc9d.json  query-90dea8d4d7312cc4c7cc328f90922e133af73fef69dfa0b21296656440c35263.json  query-b14dea5b22de99bf327cc40b1e7649fb7eb4c26a5f9d9f703a8980b61141b077.json  query-e61e50211d187785329ab7e0ddc80bbd4ef5713385112b488718ed91af7e0682.json
apps/lockers/assets/: script.js  style.css
apps/lockers/migrations/: 20260117074041_CreateLockersSchema.sql
apps/lockers/src/: main.rs  persistence.rs  server.rs  templates.rs  tests.rs  uid.rs
apps/lockers/templates/: index.tera.html
apps/opentracker/: README.md
apps/opentracker/backend/: Cargo.toml  Dockerfile  local-config.yaml
apps/opentracker/frontend/: .env.production  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
apps/pgmanager/: Cargo.toml  Dockerfile  local-config.yaml
apps/pgmanager/src/: config.rs  databases.rs  main.rs  tls.rs  utils.rs
apps/tag-updater/: Cargo.toml  Dockerfile  README.md
apps/tag-updater/src/: config.rs  editor.rs  git.rs  main.rs
apps/today/: .env  Cargo.toml  Dockerfile  Justfile  local-config.yaml
apps/today/src/: args.rs  config.rs  main.rs  router.rs  server.rs  templates.rs  tests.rs  uid.rs
apps/today/templates/: index.tera.html
apps/uptime/: .env  Cargo.toml  Dockerfile  Justfile  local-config.yaml
apps/uptime/.sqlx/: query-0b6c2ab81e43517389bab393e9c9cd3f810920c9c0c432cb484f73582b33523f.json  query-1806d5ec413765df7be7e823c0fa098f41904b49d4b1e5f96a1456872db60be7.json  query-1b1ba2f9f9d053d7e39f7bae9c9fccce287109dc14ae2c39e14719847ac45d43.json  query-3cb21bcc0cd50f6ea5ab0e2b626d6ec9d97d3f60edad0198b856233971f35dd2.json  query-43975333941f20ca821f3b8339e522af27babde55a73a1452da3de2c3706297a.json  query-4e8ad86da9bb0055754569d51bab126fb902408844eac94591ec90b969f7c82f.json  query-7523c845c39101c458c4418cdf958b5ca5a6935aefcf857aef33de0e67515206.json  query-7aea47bbaff5b5a9c2100ad13f1595ee388a1b81638fb2c6ca365c805d02b6c7.json  query-7e1dcfc898cf441c2d9273919a9b49eefcdf31729cb81be0a26a6faa0626b1d6.json  query-8fd056fda236cbad7312adbfa3c699921c547acd90d90c93b9914a1450e2b6ac.json  query-99b64bcd5c91bb5bc66d68054bf7c3511260c39f1ad84778ffae13256cec9441.json  query-9b04facc77fb22b7b3245a03b47194c50975b596b7b755279a5f228c853712af.json  query-a8ef08a6b7d9d3aa538f1567b0428d2ca7c4a72d388c1d0ae3745d2293a96dd5.json  (+3 more)
(+291 files in other folders)
