[workspace]
resolver = "3"
members = [
	"certmanager",
	"dns-server",
	"events",
	"foundation/args",
	"foundation/configuration",
	"foundation/credentials",
	"foundation/database-bootstrap",
	"foundation/http-server",
	"foundation/init",
	"foundation/logging",
	"foundation/recurring-job",
	"foundation/shutdown",
	"foundation/telemetry",
	"foundation/templating",
	"foundation/uid",
	"lockers",
	"opentracker/backend",
	"pgmanager",
	"tag-updater",
	"today",
	"uptime",
	"utils/application-bootstrap"
]

[workspace.dependencies]
axum = "0.8.4"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
serde = "1.0.219"
tracing = "0.1.41"
