[workspace]
resolver = "3"
members = [
	"certmanager",
	"dns-server",
	"events",
	"foundation/args",
	"foundation/configuration",
	"foundation/credentials",
	"foundation/database-bootstrap",
	"foundation/http-server",
	"foundation/init",
	"foundation/logging",
	"foundation/metrics",
	"foundation/recurring-job",
	"foundation/shutdown",
	"foundation/telemetry",
	"foundation/templating",
	"foundation/uid",
	"lockers",
	"opentracker/backend",
	"pgmanager",
	"tag-updater",
	"today",
	"uptime",
	"utils/application-bootstrap"
]

[workspace.dependencies]
axum = "0.8.9"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = "1.0.219"
tracing = "0.1.41"
