[package]
name = "certmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.14"
aws-sdk-route53 = "1.108.0"
aws-sdk-s3 = "1.125.0"
axum.workspace = true
color-eyre = "0.6.3"
foundation-configuration = { version = "0.1.0", path = "../foundation/configuration" }
foundation-http-server = { version = "0.1.0", path = "../foundation/http-server" }
foundation-init = { version = "0.1.0", path = "../foundation/init", features = ["database"] }
foundation-recurring-job = { version = "0.1.0", path = "../foundation/recurring-job" }
foundation-shutdown = { version = "0.1.0", path = "../foundation/shutdown" }
foundation-templating = { version = "0.1.0", path = "../foundation/templating" }
foundation-uid = { version = "0.1.0", path = "../foundation/uid" }
instant-acme = "0.8.5"
rustls = "0.23.37"
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing.workspace = true
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
x509-parser = "0.18.1"
