[package]
name = "tag-updater"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
axum-extra = { version = "0.10.1", features = ["typed-header"] }
color-eyre = { version = "0.6.5", default-features = false }
foundation-configuration = { path = "../foundation/configuration", features = ["external-bytes"] }
foundation-http-server = { version = "0.1.0", path = "../foundation/http-server" }
foundation-logging = { path = "../foundation/logging", version = "0.1.0" }
foundation-telemetry = { version = "0.1.0", path = "../foundation/telemetry" }
git2 = { version = "0.20.2", default-features = false, features = ["ssh"] }
pico-args = "0.5.0"
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = "0.3.20"
