[package]
name = "uptime"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.5.11"
aws-sdk-sns = "1.52.0"
axum.workspace = true
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
foundation-http-server = { version = "0.1.0", path = "../foundation/http-server" }
foundation-init = { version = "0.1.0", path = "../foundation/init", features = ["database"] }
foundation-shutdown = { version = "0.1.0", path = "../foundation/shutdown" }
humantime = "2.1.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tera = "1.20.0"
tokio = { version = "1.41.0", features = ["macros", "rt", "net"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
x509-parser = "0.16"

[dev-dependencies]
mockito = "1.6.1"
