[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
ureq = "3.3.0"
