[package]
name = "foundation-configuration"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.5", optional = true }
aws-sdk-s3 = { version = "1.103.0", optional = true }
color-eyre = { version = "0.6.5", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["fs"], optional = true }
tracing.workspace = true

[features]
aws-config = ["dep:aws-config"]
aws-sdk-s3 = ["dep:aws-sdk-s3"]
external-bytes = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio"]
tokio = ["dep:tokio"]
