[package]
name = "foundation-init"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
foundation-args = { version = "0.1.0", path = "../args" }
foundation-configuration = { version = "0.1.0", path = "../configuration" }
foundation-logging = { version = "0.1.0", path = "../logging" }
foundation-telemetry = { version = "0.1.0", path = "../telemetry" }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = "0.3.20"
