[package]
name = "foundation-shutdown"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
tokio = { version = "1.48.0", default-features = false, features = ["macros", "signal", "sync"] }
tokio-util = "0.7.17"
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "time", "test-util"] }
