[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing-core = "0.1.34"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"
