[package]
name = "foundation-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.0"
serde = { workspace = true, features = ["derive"] }
tracing-core = "0.1.34"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = "0.3.19"
