[package]
name = "foundation-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing-core = "0.1.34"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = "0.3.23"
