[package]
name = "foundation-uid"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
sqlx = { version = "0.8.6", default-features = false, optional = true }
uuid = { version = "1.18.0", features = ["v4"] }

[features]
serde = ["dep:serde", "uuid/serde"]
encoding = ["dep:base64", "serde"]
sqlx = ["dep:sqlx"]

[dev-dependencies]
serde_json = "1.0.143"
