[package]
name = "opentracker"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.7", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
once_cell = "1.19.0"
pin-project-lite = "0.2.14"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
float-cmp = "0.9.0"
