[package]
name = "opentracker"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2024"

[dependencies]
axum.workspace = true
axum-macros = "0.5.1"
bcrypt = "0.19.1"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
foundation-logging = { version = "0.1.0", path = "../../foundation/logging" }
futures = "0.3.31"
itertools = "0.14.0"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
once_cell = "1.21.4"
pin-project-lite = "0.2.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
uuid = { version = "1.23.2", features = ["serde", "v4"] }

[dev-dependencies]
float-cmp = "0.10.0"
